[gd_scene load_steps=119 format=3 uid="uid://bfi1wqf0pfmuw"]

[ext_resource type="Texture2D" uid="uid://mgqpx704hkqu" path="res://Art/Environment/Objects/laser_activate.png" id="1_0p8b0"]
[ext_resource type="Script" path="res://Scenes/Objects/Environment/Toggleables/Traps/laser_trap.gd" id="1_s3tmy"]
[ext_resource type="PackedScene" uid="uid://c34mfqhn2vlcn" path="res://Scenes/Components/Environment/power_controller.tscn" id="2_6v3uc"]
[ext_resource type="Texture2D" uid="uid://cnvcl5isc8p3s" path="res://Art/Environment/Objects/laser_idle.png" id="2_m4gcp"]
[ext_resource type="Texture2D" uid="uid://b52ixem0xf6kc" path="res://Art/Environment/Objects/laser_deactivate.png" id="3_m7ayo"]
[ext_resource type="Script" path="res://Scenes/Components/Environment/damaging_zone.gd" id="5_wlxll"]
[ext_resource type="Texture2D" uid="uid://dmannaglkdjdi" path="res://Art/Environment/Objects/laser_deactivate - Copy.png" id="6_gjnty"]
[ext_resource type="Texture2D" uid="uid://1ylusuoyp8fy" path="res://Art/Environment/Objects/laser idle top.png" id="7_nh2pu"]
[ext_resource type="AudioStream" uid="uid://cy65sariikr36" path="res://Audio/Objects/Traps/Laser Trap/laserchargeNEW.mp3" id="7_tqt63"]
[ext_resource type="PackedScene" uid="uid://cktj00bqwqqud" path="res://Scenes/Audio/impact_sound_for_player.tscn" id="8_c242f"]
[ext_resource type="AudioStream" uid="uid://b1qkth1vm8h63" path="res://Audio/Objects/Traps/Laser Trap/laser repeat hopefully.mp3" id="8_k33tm"]
[ext_resource type="AudioStream" uid="uid://bhy00yhx6na7x" path="res://Audio/Objects/Traps/Laser Trap/laserfire.mp3" id="8_n4e3q"]
[ext_resource type="AudioStream" uid="uid://cjm41y1w5y4lv" path="res://Audio/Objects/Traps/Laser Trap/laser disengage.mp3" id="9_twr1j"]
[ext_resource type="PackedScene" uid="uid://cywuss6hgdpb7" path="res://Scenes/Components/Universal/timer_component.tscn" id="10_dum20"]
[ext_resource type="Texture2D" uid="uid://b51jc1bwxk3j3" path="res://Resources/Gradients/basic light.tres" id="11_vp2rf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ndrmj"]
atlas = ExtResource("1_0p8b0")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_cttmc"]
atlas = ExtResource("1_0p8b0")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bvj8d"]
atlas = ExtResource("1_0p8b0")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_uya8o"]
atlas = ExtResource("1_0p8b0")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1pt3c"]
atlas = ExtResource("1_0p8b0")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tp7xf"]
atlas = ExtResource("1_0p8b0")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofb54"]
atlas = ExtResource("1_0p8b0")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tcf1s"]
atlas = ExtResource("1_0p8b0")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkryx"]
atlas = ExtResource("1_0p8b0")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_q6vwr"]
atlas = ExtResource("1_0p8b0")
region = Rect2(1152, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3jjah"]
atlas = ExtResource("1_0p8b0")
region = Rect2(1280, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pm235"]
atlas = ExtResource("1_0p8b0")
region = Rect2(1408, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_m5po4"]
atlas = ExtResource("2_m4gcp")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_c38i6"]
atlas = ExtResource("2_m4gcp")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_75tf5"]
atlas = ExtResource("2_m4gcp")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3dfwc"]
atlas = ExtResource("2_m4gcp")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0dhmh"]
atlas = ExtResource("2_m4gcp")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_46r1d"]
atlas = ExtResource("2_m4gcp")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_84d5f"]
atlas = ExtResource("2_m4gcp")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mv2q8"]
atlas = ExtResource("2_m4gcp")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6v5c"]
atlas = ExtResource("3_m7ayo")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_15kuk"]
atlas = ExtResource("3_m7ayo")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1r23k"]
atlas = ExtResource("3_m7ayo")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_20xya"]
atlas = ExtResource("3_m7ayo")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bt72q"]
atlas = ExtResource("3_m7ayo")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6udlt"]
atlas = ExtResource("3_m7ayo")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3yd0m"]
atlas = ExtResource("3_m7ayo")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bdp2u"]
atlas = ExtResource("3_m7ayo")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dtv7j"]
atlas = ExtResource("3_m7ayo")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3xxef"]
atlas = ExtResource("3_m7ayo")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_krtpy"]
atlas = ExtResource("1_0p8b0")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j44kw"]
atlas = ExtResource("1_0p8b0")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ajia5"]
atlas = ExtResource("1_0p8b0")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wihxc"]
atlas = ExtResource("1_0p8b0")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_try10"]
atlas = ExtResource("1_0p8b0")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wcgce"]
atlas = ExtResource("1_0p8b0")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhnkp"]
atlas = ExtResource("1_0p8b0")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxe2e"]
atlas = ExtResource("1_0p8b0")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6s5n"]
atlas = ExtResource("1_0p8b0")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6lhe"]
atlas = ExtResource("1_0p8b0")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4e6o"]
atlas = ExtResource("1_0p8b0")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_knhqi"]
atlas = ExtResource("1_0p8b0")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qg8sk"]
atlas = ExtResource("2_m4gcp")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0820p"]
atlas = ExtResource("2_m4gcp")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0k62"]
atlas = ExtResource("2_m4gcp")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xsdmp"]
atlas = ExtResource("2_m4gcp")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_104cb"]
atlas = ExtResource("2_m4gcp")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gyy8g"]
atlas = ExtResource("2_m4gcp")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_opbel"]
atlas = ExtResource("2_m4gcp")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgnyn"]
atlas = ExtResource("2_m4gcp")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oyscg"]
atlas = ExtResource("2_m4gcp")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2yon"]
atlas = ExtResource("2_m4gcp")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7xyj5"]
atlas = ExtResource("2_m4gcp")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0jb54"]
atlas = ExtResource("2_m4gcp")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wyhgx"]
atlas = ExtResource("2_m4gcp")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8jjeb"]
atlas = ExtResource("2_m4gcp")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ikch"]
atlas = ExtResource("2_m4gcp")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ih04l"]
atlas = ExtResource("2_m4gcp")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_811ob"]
atlas = ExtResource("2_m4gcp")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dtndh"]
atlas = ExtResource("2_m4gcp")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmegk"]
atlas = ExtResource("2_m4gcp")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhbnh"]
atlas = ExtResource("2_m4gcp")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xxn5c"]
atlas = ExtResource("2_m4gcp")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhdqi"]
atlas = ExtResource("2_m4gcp")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hral2"]
atlas = ExtResource("2_m4gcp")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ewnam"]
atlas = ExtResource("2_m4gcp")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3mis"]
atlas = ExtResource("3_m7ayo")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yh850"]
atlas = ExtResource("3_m7ayo")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nlq06"]
atlas = ExtResource("3_m7ayo")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bmonn"]
atlas = ExtResource("3_m7ayo")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rx110"]
atlas = ExtResource("3_m7ayo")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqupc"]
atlas = ExtResource("3_m7ayo")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7jhi7"]
atlas = ExtResource("3_m7ayo")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5o66"]
atlas = ExtResource("3_m7ayo")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h0gw5"]
atlas = ExtResource("3_m7ayo")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_76s7a"]
atlas = ExtResource("3_m7ayo")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nn232"]
atlas = ExtResource("3_m7ayo")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tajn3"]
atlas = ExtResource("3_m7ayo")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mreyi"]
atlas = ExtResource("3_m7ayo")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y8vx3"]
atlas = ExtResource("3_m7ayo")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bea17"]
atlas = ExtResource("3_m7ayo")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lrghb"]
atlas = ExtResource("7_nh2pu")
region = Rect2(0, 0, 128, 384)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5qkb"]
atlas = ExtResource("7_nh2pu")
region = Rect2(128, 0, 128, 384)

[sub_resource type="AtlasTexture" id="AtlasTexture_v8irc"]
atlas = ExtResource("7_nh2pu")
region = Rect2(256, 0, 128, 384)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdep0"]
atlas = ExtResource("7_nh2pu")
region = Rect2(384, 0, 128, 384)

[sub_resource type="AtlasTexture" id="AtlasTexture_eq6ja"]
atlas = ExtResource("7_nh2pu")
region = Rect2(512, 0, 128, 384)

[sub_resource type="AtlasTexture" id="AtlasTexture_hviyd"]
atlas = ExtResource("7_nh2pu")
region = Rect2(640, 0, 128, 384)

[sub_resource type="AtlasTexture" id="AtlasTexture_nihwm"]
atlas = ExtResource("7_nh2pu")
region = Rect2(768, 0, 128, 384)

[sub_resource type="AtlasTexture" id="AtlasTexture_lvapi"]
atlas = ExtResource("7_nh2pu")
region = Rect2(896, 0, 128, 384)

[sub_resource type="AtlasTexture" id="AtlasTexture_56kqv"]
atlas = ExtResource("6_gjnty")
region = Rect2(0, 0, 128, 384)

[sub_resource type="AtlasTexture" id="AtlasTexture_n64od"]
atlas = ExtResource("6_gjnty")
region = Rect2(128, 0, 128, 384)

[sub_resource type="AtlasTexture" id="AtlasTexture_fy4qb"]
atlas = ExtResource("6_gjnty")
region = Rect2(256, 0, 128, 384)

[sub_resource type="AtlasTexture" id="AtlasTexture_vxqos"]
atlas = ExtResource("6_gjnty")
region = Rect2(384, 0, 128, 384)

[sub_resource type="AtlasTexture" id="AtlasTexture_t6s6y"]
atlas = ExtResource("6_gjnty")
region = Rect2(512, 0, 128, 384)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwww5"]
atlas = ExtResource("6_gjnty")
region = Rect2(640, 0, 128, 384)

[sub_resource type="AtlasTexture" id="AtlasTexture_oxui5"]
atlas = ExtResource("6_gjnty")
region = Rect2(768, 0, 128, 384)

[sub_resource type="AtlasTexture" id="AtlasTexture_hx64p"]
atlas = ExtResource("6_gjnty")
region = Rect2(896, 0, 128, 384)

[sub_resource type="AtlasTexture" id="AtlasTexture_anvo1"]
atlas = ExtResource("6_gjnty")
region = Rect2(1024, 0, 128, 384)

[sub_resource type="SpriteFrames" id="SpriteFrames_tg5ai"]
animations = [{
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_ndrmj")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_cttmc")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_bvj8d")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_uya8o")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_1pt3c")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_tp7xf")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_ofb54")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tcf1s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkryx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6vwr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3jjah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pm235")
}],
"loop": false,
"name": &"Activate",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m5po4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c38i6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_75tf5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3dfwc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0dhmh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_46r1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_84d5f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mv2q8")
}],
"loop": true,
"name": &"Active",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6v5c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_15kuk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1r23k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_20xya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bt72q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6udlt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3yd0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bdp2u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dtv7j")
}],
"loop": false,
"name": &"Deactivate",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3xxef")
}],
"loop": true,
"name": &"Inactive",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_krtpy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j44kw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajia5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wihxc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_try10")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wcgce")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhnkp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxe2e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6s5n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6lhe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4e6o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_knhqi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qg8sk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0820p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0k62")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsdmp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_104cb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gyy8g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_opbel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgnyn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oyscg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2yon")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7xyj5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0jb54")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wyhgx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8jjeb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ikch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ih04l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_811ob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dtndh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmegk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhbnh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xxn5c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhdqi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hral2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewnam")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_c3mis")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_yh850")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_nlq06")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_bmonn")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_rx110")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_gqupc")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_7jhi7")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_q5o66")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_h0gw5")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_76s7a")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_nn232")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_tajn3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0gw5")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_76s7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nn232")
}, {
"duration": 4.0,
"texture": SubResource("AtlasTexture_tajn3")
}, {
"duration": 4.0,
"texture": SubResource("AtlasTexture_mreyi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y8vx3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bea17")
}],
"loop": true,
"name": &"SingleCycle",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lrghb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5qkb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v8irc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rdep0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eq6ja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hviyd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nihwm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lvapi")
}],
"loop": true,
"name": &"beeg active",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_56kqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n64od")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fy4qb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxqos")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6s6y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwww5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oxui5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hx64p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_anvo1")
}],
"loop": false,
"name": &"beeg deactivate",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c0sav"]
size = Vector2(24, 92)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_3uvdd"]
streams_count = 1
random_pitch = 1.05
random_volume_offset_db = 0.0
stream_0/stream = ExtResource("8_n4e3q")
stream_0/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_khfxh"]
streams_count = 1
random_pitch = 1.05
random_volume_offset_db = 0.0
stream_0/stream = ExtResource("8_k33tm")
stream_0/weight = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_dj831"]

[node name="LaserTrap" type="Node2D"]
script = ExtResource("1_s3tmy")
sound_enabled = true

[node name="PowerController" parent="." instance=ExtResource("2_6v3uc")]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 5
sprite_frames = SubResource("SpriteFrames_tg5ai")
animation = &"Inactive"
autoplay = "Inactive"

[node name="DamagingZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 180
monitoring = false
script = ExtResource("5_wlxll")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamagingZone"]
visible = false
position = Vector2(-4, 1)
shape = SubResource("RectangleShape2D_c0sav")

[node name="ImpactSoundForPlayer" parent="DamagingZone" instance=ExtResource("8_c242f")]

[node name="TimerComponent" parent="." instance=ExtResource("10_dum20")]

[node name="ChargeSound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("7_tqt63")
max_distance = 1000.0
attenuation = 1.62451
panning_strength = 3.0
bus = &"Sounds"

[node name="FireSound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_3uvdd")
volume_db = -4.052
max_distance = 1000.0
attenuation = 1.62451
panning_strength = 3.0
bus = &"Sounds"

[node name="LoopSound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_khfxh")
volume_db = -4.052
max_distance = 1000.0
attenuation = 1.62451
panning_strength = 3.0
bus = &"Sounds"

[node name="DischargeSound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("9_twr1j")
max_distance = 1000.0
attenuation = 1.62451
panning_strength = 3.0
bus = &"Sounds"

[node name="Light" type="PointLight2D" parent="."]
unique_name_in_owner = true
position = Vector2(-2, 3.8147e-06)
scale = Vector2(0.2, 0.2)
color = Color(1, 0.309804, 0.188235, 0)
range_item_cull_mask = 3
shadow_enabled = true
texture = ExtResource("11_vp2rf")

[node name="Identifier" type="StaticBody2D" parent="." groups=["danger"]]
collision_layer = 1024
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Identifier"]
position = Vector2(-1, 0)
shape = SubResource("CircleShape2D_dj831")

[connection signal="body_entered" from="DamagingZone" to="DamagingZone" method="_on_body_entered"]
